Bug 162841 - Re-saving a password-protected Basic library fails an assertion
Summary: Re-saving a password-protected Basic library fails an assertion
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2024-09-07 17:04 UTC by Mike Kaganski
Modified: 2024-09-18 13:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-09-07 17:04:41 UTC
1. Create a new Writer document;
2. Tools->Macros->Organize Macros->Basic;
3. [Organizer];
4. "Libraries" tab -> Location: Untitled 1
5. [New]->"Library1"->[OK]
6. [Password]->"1234"->[OK]
7. "Modules" tab -> Untitled 1 -> Library1/Module1 ->[Edit]
8. Add something to Main - e.g., MsgBox "foo"
9. Save
10. Reload (confirm macros)
11. Tools->Macros->Run Macro; select document's Library1/Module1/Main
12. [Run] -> shows the message box
13. Save (Ctrl+S)

=> Assertion is failed at
https://opengrok.libreoffice.org/xref/core/package/source/zippackage/ZipPackageStream.cxx?r=e5aa87ae#663
Comment 1 Commit Notification 2024-09-16 17:09:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6e76e8a210e51e7c79e0e845c7a4c0db9fb55abc

tdf#162841 package: fix loading AES-GCM encrypted macros from ODF

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Michael Stahl 2024-09-16 17:24:35 UTC
fixed on master
Comment 3 Commit Notification 2024-09-17 16:50:21 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/40c4cdf056a89d41037274003793c5349f7c909e

tdf#162841 package: fix loading AES-GCM encrypted macros from ODF

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-09-18 13:07:21 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/a4900a512ca66932423af32af250deb8b5f4f258

tdf#162841 package: fix loading AES-GCM encrypted macros from ODF

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.