package/inc/ZipPackage.hxx
@@ -58,6 +58,8 @@ enum InitialisationMode
     e_IMode_XStream
 };
 
+sal_Int32 GetDefaultDerivedKeySize(sal_Int32 nCipherID);
+
 class ZipPackage final : public cppu::WeakImplHelper
                     <
                        css::lang::XInitialization,
@@ -128,16 +130,7 @@ public:
     sal_Int32 GetEncAlgID() const { return m_nCommonEncryptionID; }
     ::std::optional<sal_Int32> GetChecksumAlgID() const { return m_oChecksumDigestID; }
     sal_Int32 GetDefaultDerivedKeySize() const {
-        switch (m_nCommonEncryptionID)
-        {
-            case css::xml::crypto::CipherID::BLOWFISH_CFB_8:
-                return 16;
-            case css::xml::crypto::CipherID::AES_CBC_W3C_PADDING:
-            case css::xml::crypto::CipherID::AES_GCM_W3C:
-                return 32;
-            default:
-                O3TL_UNREACHABLE;
-        }
+        return ::GetDefaultDerivedKeySize(m_nCommonEncryptionID);
     }
 
     rtl::Reference<comphelper::RefCountedMutex>& GetSharedMutexRef() { return m_aMutexHolder; }
